Playing animation (after deleting rigid body obj) crashes blender. #70588

Closed
opened 2019-10-06 17:14:48 +02:00 by Baran Yagcioglu · 3 comments

System Information
Operating system: Windows 10 Home 1903
Graphics card: Intel UHD 630

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-05 20:51, hash: 4707f1982d, type: Release
build date: 2019-10-05, 23:02:10
platform: Windows

Short description of error
if you delete the rigid body object (with baked rigid body cache) and then hit spacebar to play animation, blender crashes.

Exact steps for others to reproduce the error
1- Open Blender
2- Select the default cube
3- Add Rigid body to default cube
4- Bake the cache (scene properties->rigid body World->cache)
5- Delete the cube from outliner
6- Press space
7- Blender crashes.

or open the blend file untitled.blend

1- Delete the bake (scene properties->rigid body World->cache)
2- Bake the cache
3- Delete the cube from outliner
4- Press space
5- Blender crashes.

**System Information** Operating system: Windows 10 Home 1903 Graphics card: Intel UHD 630 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-05 20:51, hash: 4707f1982ddb, type: Release build date: 2019-10-05, 23:02:10 platform: Windows **Short description of error** if you delete the rigid body object (with baked rigid body cache) and then hit spacebar to play animation, blender crashes. **Exact steps for others to reproduce the error** 1- Open Blender 2- Select the default cube 3- Add Rigid body to default cube 4- Bake the cache (scene properties->rigid body World->cache) 5- Delete the cube from outliner 6- Press space 7- Blender crashes. or open the blend file [untitled.blend](https://archive.blender.org/developer/F7792833/untitled.blend) 1- Delete the bake (scene properties->rigid body World->cache) 2- Bake the cache 3- Delete the cube from outliner 4- Press space 5- Blender crashes.

Added subscriber: @BaranYagcioglu

Added subscriber: @BaranYagcioglu
Bastien Montagne self-assigned this 2019-10-07 11:48:22 +02:00

This issue was referenced by 270562fe12

This issue was referenced by 270562fe125d6902dc44aa55227125d874cd2c49

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70588
No description provided.