Fix T70588: Playing animation (after deleting rigid body obj) crashes blender.

Fixing/working around another weakness of current RBW model... This is
not really nice, but it should work for now, and we cannot really do
anything else but that kind of monkey patching here anyway.